fix: nav overflow hidden

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -7,6 +7,7 @@
     padding-right: 10vw;
     position: sticky; 
     top: 0; 
+    overflow: hidden;
 }
 
 .nav, .icons, .nav-container {
